--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "news-app",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "0.0.1",
   "type": "module",
+  "author": {
+    "name": "Den Zakh",
+    "email": "den.zakh@gmail.com"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -10,10 +14,12 @@
     "preview": "vite preview",
     "test": "vitest",
     "testUpdate": "vitest -u",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "@vitest/coverage-v8": "^3.1.2",
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
