--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_NEWS_API_KEY='bf607a2b66624b21ba4c8dc5adf70357'
+NEWS_API_KEY='bf607a2b66624b21ba4c8dc5adf70357'
+VITE_NEWS_API_URL='/api/news'
