--- a/package.json
+++ b/package.json
@@ -8,23 +8,11 @@
     "email": "den.zakh@gmail.com"
   },
   "scripts": {
-    "dev": "vite",
+    "vercel": "vercel dev",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest",
-    "testUpdate": "vitest -u",
-    "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.3",
-    "@vitest/coverage-v8": "^3.1.2",
-    "axios": "^1.8.4",
-    "framer-motion": "^12.9.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "test": "vitest"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
