--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "vercel": "vercel dev",
+    "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/vite": "^4.1.5",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -26,12 +28,15 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^3.1.1",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "framer-motion": "^12.9.4",
     "globals": "^15.15.0",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.3",
+    "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
