try fix serverless fn

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "musk-frontend-final-1",
   "private": false,
   "version": "0.0.1",
-  "module": "NodeNext",
-  "moduleResolution": "NodeNext",
+  "type": "module",
   "author": {
     "name": "Den Zakh",
     "email": "den.zakh@gmail.com"
